--- a/openmetadata-ui/src/main/resources/ui/src/pages/DataMarketplacePage/data-marketplace-page.less
+++ b/openmetadata-ui/src/main/resources/ui/src/pages/DataMarketplacePage/data-marketplace-page.less
@@ -9,7 +9,7 @@
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
-  padding-bottom: 24px;
+  padding-bottom: 16px;
   padding-top: @om-navbar-height;
   mask-image: linear-gradient(to bottom, #000 60%, transparent 100%);
   -webkit-mask-image: linear-gradient(to bottom, #000 60%, transparent 100%);
